# rostak

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml  package.xml  setup.py
config/: tak.yaml
launch/: example.launch  rostak.launch.py
scripts/: roscot_fix  rostak_bridge
src/rostak/: cot_utility.py  roscot_fix.py  rostak_bridge.py
