<?xml version="1.0"?>
<package format="2">
  <name>rostak</name>
  <version>1.0.0</version>
  <description>A rostak bridge for ROS2</description>
  <maintainer email="marcos@seafloor.com">Marcos Barrera</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  
</package>
